--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node ./app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,8 +11,6 @@
     "debug": "~2.6.9",
     "eth-lightwallet": "^4.0.0",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "morgan": "~1.9.1"
   }
 }
